# olorin-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  clear_logs  down  restart  rlm-summary  ruff.toml  settings.json  setup.py  status  up
broca/: consumer.py  create-topic  fix-timestamps  fix_topic_timestamps.py  list-topics  producer.py  requirements.txt  run  tts_engine.py
cortex/: README.md  consumer.py  controller.py  create-topic  list-topics  producer.py  requirements.txt  run
cortex/tests/: conftest.py  test_chat_store.py  test_consumer.py  test_controller.py
hippocampus/: CLAUDE.md  README.md  clean_md.py  clear_db.py  context_store.py  document_tracker_base.py  ebook_tracker.py  enrichener.py  file_tracker.py  ingest.py  markdown_chunker.py  office_tracker.py  pdf_inspect.py  pdf_tracker.py  producer.py  pytest.ini  query.py  requirements.txt  run  status.py  txt_tracker.py
hippocampus/tests/: __init__.py  conftest.py  test_config.py  test_document_tracker_base.py  test_markdown_chunker.py  test_no_frontmatter.py
libs/: __init__.py  capabilities.py  chat_store.py  config.py  context_formatter.py  context_store.py  control.py  control_server.py  embeddings.py  embeddings_local.py  inference.py  kafka_messages.py  olorin_logging.py  persistent_log.py  rlm_executor.py  state.py  streaming_processor.py  text_processing.py  tool_client.py
libs/config-rs/: Cargo.toml
libs/config-rs/src/: lib.rs
libs/control_handlers/: __init__.py  audio_status.py  auto_context.py  clear.py  resume_audio.py  stop_audio.py  stop_broca_audio_play.py  write.py
libs/state-rs/: Cargo.toml
libs/state-rs/src/: lib.rs
libs/tests/: __init__.py  test_capabilities.py  test_context_formatter.py  test_control.py  test_control_handlers.py  test_control_server.py  test_inference_anthropic.py  test_inference_ollama.py  test_kafka_messages.py  test_streaming_processor.py
temporal/: audio_capture.py  consumer.py  debug_listen.py  leopard_stt.py  openwakeword_detector.py  requirements.txt  stt_engine.py  test_vad.py  vad.py  wake_word.py
tools/chat/: Cargo.toml  run
tools/chat/src/: api.rs  app.rs  kafka.rs  main.rs  message.rs  ui.rs
tools/chat/src/db/: chat.rs  context.rs  mod.rs
tools/embeddings/: requirements.txt  server.py
tools/olorin-inspector/: Cargo.toml
tools/olorin-inspector/src/: app.rs  event.rs  main.rs
tools/olorin-inspector/src/db/: chromadb.rs  mod.rs  sqlite.rs  traits.rs
tools/olorin-inspector/src/ui/: db_list.rs  input.rs  layout.rs  mod.rs  records.rs
tools/search/: requirements.txt  server.py
tools/search/tests/: __init__.py  conftest.py  test_server.py
tools/settings/: Cargo.toml  run
tools/settings/src/: api.rs  app.rs  input_handler.rs  main.rs  settings.rs  text_buffer.rs  validation.rs
tools/settings/src/ui/: form.rs  inputs.rs  mod.rs  tabs.rs
tools/train-wake-word/: train.py
tools/train-wake-word/.container-build/: Dockerfile  train_in_container.py
tools/train-wake-word/configs/: hey_olorin.yaml
tools/write/: Cargo.toml
tools/write/src/: main.rs
