[package]
name = "olorin-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified configuration library for Olorin Project"
authors = ["Olorin Project"]

[dependencies]
thiserror = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
