[package]
name = "olorin-state"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Centralized state management library for Olorin Project"
authors = ["Olorin Project"]

[dependencies]
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
