[package]
name = "olorin-chat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TUI chat client for the Olorin AI pipeline"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Kafka
rdkafka = { version = "0.37", features = ["dynamic-linking"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "6"
textwrap = "0.16"

# Configuration
olorin-config = { path = "../../libs/config-rs" }
