[package]
name = "olorin-inspector"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TUI database inspector for Olorin Project"
authors = ["Olorin Project"]

[[bin]]
name = "olorin-inspector"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
textwrap = "0.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Local config library
olorin-config = { path = "../../libs/config-rs" }

[profile.release]
lto = true
strip = true
