[package]
name = "olorin-settings"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "TUI settings editor for Olorin Project"

[[bin]]
name = "olorin-settings"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Configuration
olorin-config = { path = "../../libs/config-rs" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Error handling
anyhow = "1"

# Text utilities
textwrap = "0.16"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
